# Painter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  coding_regulation.md  resources.qrc
apps/: main.cpp
modules/: CMakeLists.txt
modules/color/: colorfield.cpp  colorfield.h  icolor.h  pencontrol.cpp  pencontrol.h
modules/commands/: groupcommand.cpp  groupcommand.h  icommand.cpp  icommand.h  movecommand.cpp  movecommand.h
modules/common/: common.cpp  common.h
modules/tools/: CMakeLists.txt  basiccommands.h  basiccommands.hpp  itool.cpp  itool.h  toolmanager.cpp  toolmanager.h
modules/tools/drawtools/: commontool.cpp  drawtool.h  ellipsetool.cpp  freehandtool.cpp  linetool.cpp  polygontool.cpp  rectangletool.cpp  selecttool.cpp
modules/tools/edittools/: combinetool.cpp  deletetool.cpp  edittool.h  selecttool.cpp
modules/tools/viewtools/: rotateviewtool.cpp  viewtool.h  zoomtool.cpp
modules/vision/: CMakeLists.txt  canvasview.cpp  canvasview.h  mainwindow.cpp  mainwindow.h
